抽取下拉刷新和上拉加载更多的公共逻辑到Base类中

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,20 +19,32 @@
             app:msv_loadingView="@layout/layout_loading"
             app:msv_viewState="loading">
 
-            <android.support.v4.widget.SwipeRefreshLayout
-                android:id="@+id/swipe_refresh"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_list"
+                <include
+                    android:id="@+id/toolbar"
+                    layout="@layout/layout_toolbar"/>
+
+                <android.support.v4.widget.SwipeRefreshLayout
+                    android:id="@+id/swipe_refresh"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                </android.support.v7.widget.RecyclerView>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </android.support.v7.widget.RecyclerView>
 
 
-            </android.support.v4.widget.SwipeRefreshLayout>
+                </android.support.v4.widget.SwipeRefreshLayout>
+            </LinearLayout>
+
+
         </com.kennyc.view.MultiStateView>
     </LinearLayout>
 
