修改LoadingProgress的默认颜色为colorDefault

--- a/app/src/main/res/drawable/shape_button_border_grey.xml
+++ b/app/src/main/res/drawable/shape_button_border_grey.xml
@@ -8,6 +8,6 @@
     <corners android:radius="5dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/grey_dark1"/>
+        android:color="@color/gray_dark1"/>
 
 </shape>
