--- a/common/src/main/res/layout/layout_error.xml
+++ b/common/src/main/res/layout/layout_error.xml
@@ -27,7 +27,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/default_text_top_margin"
             android:text="网络连接异常，请重新加载"
-            android:textColor="@color/grey_dark1"
+            android:textColor="@color/gray_dark1"
             android:textSize="@dimen/text_big"/>
 
         <Button
@@ -38,7 +38,7 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/shape_button_border_grey"
             android:text="重新加载"
-            android:textColor="@color/grey_dark1"
+            android:textColor="@color/gray_dark1"
             android:textSize="@dimen/text_big"/>
 
     </LinearLayout>
